SimpleComplex/Validate 2.x, 2019-01-08
--------------------------------------
- Release 2.2.

SimpleComplex/Validate 2.x, 2019-01-07
--------------------------------------
- ValidationRuleSet constructor's second argument is (preferably) now
  a rule provider or a rule provider info object; not rule-methods-available.
- ValidationRuleSet::ruleMethodsAvailable() is now deprecated.

SimpleComplex/Validate 2.x, 2019-01-06
--------------------------------------
- No rules methods but 'empty' and 'null' must allow (pass) null.
- New non-rule method 'allowNull', for nested (object|array bucket) elements.
- New rule method 'bit'.
- Type-checking rule methods.

SimpleComplex/Validate 2.x, 2019-01-04
--------------------------------------
- phpunit's assert... methods are static, not instance methods.

SimpleComplex/Validate 2.x, 2018-08-04
--------------------------------------
- timeISO8601().
- Release 2.1.

SimpleComplex/Validate 2.x, 2018-07-07
--------------------------------------
- Release 2.0.1.

SimpleComplex/Validate 2.x, 2018-06-30
--------------------------------------
- Minor test fix; requires Utils >=1.7.2.

SimpleComplex/Validate 2.x, 2018-06-03
--------------------------------------
- Release 2.0.

SimpleComplex/Validate 2.x, 2018-05-27
--------------------------------------
- Date/Datetime rules have to be named using strict acronym camelCasing because
  native \DateTime does (setISODate());
  renamed dateISO8601Local and dateTimeISO8601.
- ISO-8601 datetime rules allowing sub seconds must default to max 6 digits,
  otherwise native \DateTime will fail.

SimpleComplex/Validate 1.x, 2018-05-25
--------------------------------------
- Datetime ISO-8601 rules with timezone vs. UTC (Z), and Datetime ISO-8601 local.

SimpleComplex/Validate 1.x, 2018-05-21
--------------------------------------
- Prepare for tests.

SimpleComplex/Validate 1.x, 2018-04-07
--------------------------------------
- Release 1.0.1.

SimpleComplex/Validate 1.x, 2018-03-26