@@ -1,3 +1,9 @@
+SimpleComplex/Validate 2.x, 2019-01-12
+--------------------------------------
+- Ensure that rule set values accord with whether rule methods accept
+  (or even require) more arguments than subject self.
+- RuleProviderInterface new method getParameterMethods().
+
 SimpleComplex/Validate 2.x, 2019-01-08
 --------------------------------------
 - Release 2.2.
@@ -7,6 +13,7 @@ SimpleComplex/Validate 2.x, 2019-01-07
 - ValidationRuleSet constructor's second argument is (preferably) now
   a rule provider or a rule provider info object; not rule-methods-available.
 - ValidationRuleSet::ruleMethodsAvailable() is now deprecated.
+- RuleProviderInterface new method getTypeMethods().
 
 SimpleComplex/Validate 2.x, 2019-01-06
 --------------------------------------
